Testing: disabling images for speed

--- a/pre-compile/jade/index.jade
+++ b/pre-compile/jade/index.jade
@@ -72,20 +72,20 @@ html
                     h1 Website Designs
                     h2 Amish Furniture of Rockwall
                     p Freelance project for local company
-                    div.columns-1
-                        img.hideme(src='./img/websites/amish-furniture.png')
-                    h2 Clocks-N-Things
-                    p Freelance project for another local company
-                    div.columns-1
-                        img.hideme(src='./img/websites/clocks-n-things.png')
-                    h2 Rockwall FCM
-                    p Project for school club
-                    div.columns-1
-                        img.hideme(src='./img/websites/rockwall-fcm.png')
-                    h2 Forbidden Truth
-                    p Game project website
-                    div.columns-1
-                        img.hideme(src='./img/websites/forbidden-truth.png')
+                    //- div.columns-1
+                    //-     img.hideme(src='./img/websites/amish-furniture.png')
+                    //- h2 Clocks-N-Things
+                    //- p Freelance project for another local company
+                    //- div.columns-1
+                    //-     img.hideme(src='./img/websites/clocks-n-things.png')
+                    //- h2 Rockwall FCM
+                    //- p Project for school club
+                    //- div.columns-1
+                    //-     img.hideme(src='./img/websites/rockwall-fcm.png')
+                    //- h2 Forbidden Truth
+                    //- p Game project website
+                    //- div.columns-1
+                    //-     img.hideme(src='./img/websites/forbidden-truth.png')
                     
                     
             div.push
