--- a/pre-compile/jade/index.jade
+++ b/pre-compile/jade/index.jade
@@ -26,20 +26,20 @@ html
                             a(class="nav-#{val}" onclick="scrollTo('#{val}')")=val
                         include ../includes/menu-btn.jade
                 
-                    //- article
-                    //-     div.code-container
-                    //-         img.code-lang(src="./img/dev/html5-original.png")
-                    //-         pre
-                    //-             code.html
-                    //-                 div.code-content
-                    //-         pre
-                    //-             code.js
-                    //-                 div.code-content
-                    //-         pre
-                    //-             code.scss
-                    //-                 div.code-content
-                    //-         div#progress
-                    //-             div#bar
+                    article
+                        div.code-container
+                            img.code-lang(src="./img/dev/html5-original.png")
+                            pre
+                                code.html
+                                    div.code-content
+                            pre
+                                code.js
+                                    div.code-content
+                            pre
+                                code.scss
+                                    div.code-content
+                            div#progress
+                                div#bar
                     div.push
                 footer
                     hi justin greenlee
@@ -72,20 +72,20 @@ html
                     h1 Website Designs
                     h2 Amish Furniture of Rockwall
                     p Freelance project for local company
-                    //- div.columns-1
-                    //-     img.hideme(src='./img/websites/amish-furniture.png')
-                    //- h2 Clocks-N-Things
-                    //- p Freelance project for another local company
-                    //- div.columns-1
-                    //-     img.hideme(src='./img/websites/clocks-n-things.png')
-                    //- h2 Rockwall FCM
-                    //- p Project for school club
-                    //- div.columns-1
-                    //-     img.hideme(src='./img/websites/rockwall-fcm.png')
-                    //- h2 Forbidden Truth
-                    //- p Game project website
-                    //- div.columns-1
-                    //-     img.hideme(src='./img/websites/forbidden-truth.png')
+                    div.columns-1
+                        img.hideme(src='./img/websites/amish-furniture.png')
+                    h2 Clocks-N-Things
+                    p Freelance project for another local company
+                    div.columns-1
+                        img.hideme(src='./img/websites/clocks-n-things.png')
+                    h2 Rockwall FCM
+                    p Project for school club
+                    div.columns-1
+                        img.hideme(src='./img/websites/rockwall-fcm.png')
+                    h2 Forbidden Truth
+                    p Game project website
+                    div.columns-1
+                        img.hideme(src='./img/websites/forbidden-truth.png')
                     
                     
             div.push
