--- a/pre-compile/jade/index.jade
+++ b/pre-compile/jade/index.jade
@@ -6,7 +6,6 @@ html
         title Sample Website
         link(type="text/css" rel="stylesheet" href="css/index.min.css")
         link(type="text/css" rel="stylesheet" href="css/index.css")
-        // highlight.js
         link(type="text/css" rel="stylesheet" href="css/highlight/styles/androidstudio.css")
     
     body
@@ -72,38 +71,33 @@ html
                     h1 Website Designs
                     h2 Amish Furniture of Rockwall
                     p Freelance project for local company
-                    div.columns-1
-                        img.hideme(src='./img/websites/amish-furniture.png')
+                    img.hideme(src='./img/websites/amish-furniture.png')
                     h2 Clocks-N-Things
                     p Freelance project for another local company
-                    div.columns-1
-                        img.hideme(src='./img/websites/clocks-n-things.png')
+                    img.hideme(src='./img/websites/clocks-n-things.png')
                     h2 Rockwall FCM
                     p Project for school club
-                    div.columns-1
-                        img.hideme(src='./img/websites/rockwall-fcm.png')
+                    img.hideme(src='./img/websites/rockwall-fcm.png')
                     h2 Forbidden Truth
                     p Game project website
-                    div.columns-1
-                        img.hideme(src='./img/websites/forbidden-truth.png')
+                    img.hideme(src='./img/websites/forbidden-truth.png')
                     
                     
             div.push
             footer#footer
 
         //highlight.js
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js")
+        //- script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js")
 
         //font awesome icon set
         script(src='https://use.fontawesome.com/02b2bc5fda.js')
             
         //jQuery plugins
-        script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js')
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js")
+        //- script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js')
             
         //unused jQuery plugins    
         //- script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/0.10.12/js/jquery.terminal.min.js')
         //- script(src='https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.4/typed.min.js')
         
         //main scripts
-        script(src="js/source.js")
+        //- script(src="js/source.js")
