--- a/pre-compile/jade/index.jade
+++ b/pre-compile/jade/index.jade
@@ -93,11 +93,11 @@ html
         script(src='https://use.fontawesome.com/02b2bc5fda.js')
             
         //jQuery plugins
-        //- script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js')
             
         //unused jQuery plugins    
         //- script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/0.10.12/js/jquery.terminal.min.js')
         //- script(src='https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.4/typed.min.js')
         
         //main scripts
-        //- script(src="js/source.js")
+        script(src="js/source.js")
