Testing: Loading files as 'text' files.

--- a/pre-compile/jade/index.jade
+++ b/pre-compile/jade/index.jade
@@ -87,7 +87,7 @@ html
             footer#footer
 
         //highlight.js
-        //- script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js")
 
         //font awesome icon set
         script(src='https://use.fontawesome.com/02b2bc5fda.js')
