--- a/pre-compile/jade/index.jade
+++ b/pre-compile/jade/index.jade
@@ -6,86 +6,52 @@ html
         title Sample Website
         link(type="text/css" rel="stylesheet" href="css/index.min.css")
         link(type="text/css" rel="stylesheet" href="css/index.css")
-        link(type="text/css" rel="stylesheet" href="css/highlight/styles/androidstudio.css")
+        link(type="text/css" rel="stylesheet" href="css/highlight/styles/ir-black.css")
     
     body
-        div#main
-            
-            div.fixed-left-button
-                include ../includes/menu-btn.jade
-                
-            nav#fixed-left
-                each val in ['homepage', 'about', 'services', 'work']
-                    a(class="nav-#{val}" onclick="scrollTo('#{val}')")=val
+        .bg-1
+        .bg-2
+        .bg-3
 
-            div#homepage
-                header
-                    nav#top
-                        each val in ['homepage', 'about', 'services', 'work']
-                            a(class="nav-#{val}" onclick="scrollTo('#{val}')")=val
+        div#homepage
+            header
+                nav#top
+                    img(src="./img/sketchy_name.png")
+                    include ../includes/social-header.jade
+                    //- .nav-links
+                        //- each val in ['homepage', 'about', 'designs', 'code']
+                            //- a(class="nav-#{val}" onclick="scrollTo('#{val}')")=val
+                    .menu-btn-container
                         include ../includes/menu-btn.jade
+                    
+            footer
+                h1 Prof & Personal Websites
+                span.left <
+                span.right >
+                figure.rockwallfcm
+                    i(class="fa fa-search fa-3")
+                    img(src='./img/websites/rockwall-fcm.png')
+                    figcaption Rockwall <b>FCM</b>
                 
-                    article
-                        div.code-container
-                            img.code-lang(src="./img/dev/html5-original.png")
-                            pre
-                                code.html
-                                    div.code-content
-                            pre
-                                code.js
-                                    div.code-content
-                            pre
-                                code.scss
-                                    div.code-content
-                            div#progress
-                                div#bar
-                    div.push
-                footer
-                    hi justin greenlee
-                    button(onclick="scrollTo('work')") See Work
-                include ../includes/social-header.jade
+                figure.amishfurniture
+                    i(class="fa fa-search fa-3")
+                    img(src='./img/websites/amish-furniture.png')
+                    figcaption Amish <b>Furniture</b>
+                
+                figure.forbiddentruth
+                    i(class="fa fa-search fa-3")
+                    img(src='./img/websites/forbidden-truth.png')
+                    figcaption Forbidden <b>Truth</b>
+                    
+                figure.clocksnthings
+                    i(class="fa fa-search fa-3")
+                    img(src='./img/websites/clocks-n-things.png')
+                    figcaption Clocks-<b>N</b>-Things
+            //- .guitar
+        div.push
             
-            div#about
-                article
-                    header 
-                        span.musician Musician 
-                        span.developer Developer 
-                        span.theologian Theologian
-                    img.hideme(src='./img/me.jpg')
-                    include ../includes/about.jade
-                    
-            div#services
-                article
-                    header Here's what I have to offer...
-                    div.columns-5
-                        img.hideme(src='./img/dev/html5-original.png')
-                        img.hideme(src="./img/dev/angularjs-original.png")
-                        img.hideme(src='./img/dev/csharp-original.png')
-                        img.hideme(src='./img/dev/sass-original.png')
-                        img.hideme(src='./img/dev/nodejs-original.png')
-                    include ../includes/services.jade
-                    
-            div#work
-                article
-                    header Check out some of my latest projects...
-                    h1 Website Designs
-                    h2 Amish Furniture of Rockwall
-                    p Freelance project for local company
-                    img.hideme(src='./img/websites/amish-furniture.png')
-                    h2 Clocks-N-Things
-                    p Freelance project for another local company
-                    img.hideme(src='./img/websites/clocks-n-things.png')
-                    h2 Rockwall FCM
-                    p Project for school club
-                    img.hideme(src='./img/websites/rockwall-fcm.png')
-                    h2 Forbidden Truth
-                    p Game project website
-                    img.hideme(src='./img/websites/forbidden-truth.png')
-                    
-                    
-            div.push
-            footer#footer
-
+        //- include ../includes/lorem-ipsum.jade
+        
         //highlight.js
         script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js")
 
@@ -95,9 +61,5 @@ html
         //jQuery plugins
         script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js')
             
-        //unused jQuery plugins    
-        //- script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/0.10.12/js/jquery.terminal.min.js')
-        //- script(src='https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.4/typed.min.js')
-        
         //main scripts
         script(src="js/source.js")
