--- a/pre-compile/includes/social-header.jade
+++ b/pre-compile/includes/social-header.jade
@@ -1,6 +1,9 @@
 
 
 div.header-social-container
+    a(href="https://github.com/jgreenlee24")
+        i(class="fa fa-github fa-3")
+            
     a(href="https://www.facebook.com/justin.greenlee.3")
         i(class="fa fa-facebook fa-3")
 
