--- a/pre-compile/jade/index.jade
+++ b/pre-compile/jade/index.jade
@@ -7,6 +7,8 @@ html
         link(type="text/css" rel="stylesheet" href="css/index.min.css")
         link(type="text/css" rel="stylesheet" href="css/index.css")
         link(type="text/css" rel="stylesheet" href="css/highlight/styles/ir-black.css")
+        link(type="text/css" rel="stylesheet" href="css/github.css")
+        link(type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/devicons/1.8.0/css/devicons.min.css")
     
     body
         .bg
@@ -15,53 +17,112 @@ html
             header
                 nav#top
                     img(src="./img/sketchy_name.png")
-                    include ../includes/social-header.jade
+                    //- include ../includes/social-header.jade
                     //- .nav-links
                         //- each val in ['homepage', 'about', 'designs', 'code']
                             //- a(class="nav-#{val}" onclick="scrollTo('#{val}')")=val
-                    .menu-btn-container
-                        include ../includes/menu-btn.jade
-                    
+                    //- .menu-btn-container
+                    //-     include ../includes/menu-btn.jade
+                nav#btns
+                    a.button.github(href="https://github.com/jgreenlee24")
+                        | github
+                        span
+                            i(class="fa fa-github fa-3")
+                    a.button.cloud9(href="https://preview.c9users.io/jgreenlee24/my_cloud/")
+                        | cloud9 workspace
+                        span
+                            i(class="fa fa-cloud fa-3")
+                    a.button.linkedin(href="https://www.linkedin.com/in/justin-greenlee-60306497")
+                        | linkedin
+                        span
+                            i(class="fa fa-linkedin fa-3")
+                            
             article
-                h1 Prof & Personal Websites
-                aside
-                    h2 About Me
-                    include ../includes/lorem-ipsum.jade
+                //- div(data-repo="jgreenlee24/jgreenlee24.github.io" class="github-box-wrap")
+
                 aside.right
-                    h2 About Me
-                    include ../includes/lorem-ipsum.jade
-                article
-                    span.left <
-                    span.right >
+                    div
+                        h1.project_name sitesbyjustin.com
+                        p.technologies
+                            span(class="devicons devicons-git")
+                            span(class="devicons devicons-html5")
+                            span(class="devicons devicons-css3")
+                            span(class="devicons devicons-javascript")
+                            span(class="devicons devicons-jquery")
+                            span(class="devicons devicons-sass")
+                        p.project_desc
+                            | This website underwent 5 different design phases.
+                            | The site was created using Sass and Jade for pre-compiled languages,
+                            | HTML5 and CSS3 for other parts, jQuery for DOM manipulation, 
+                            | and it is hosted via Git Pages.
+                        a.button.github(href="https://github.com/jgreenlee24")
+                            | view on github
+                            span
+                                i(class="fa fa-github fa-3")
+                section
                     figure.rockwallfcm
                         i(class="fa fa-search fa-3")
                         img(src='./img/websites/rockwall-fcm.png')
                         figcaption Rockwall <b>FCM</b>
+                        
+                    figure.sitesbyjustin
+                        i(class="fa fa-search fa-3")
+                        img(src='./img/websites/sites-by-justin.png')
+                        figcaption Sites By <b>Justin</b>
                     
                     figure.amishfurniture
                         i(class="fa fa-search fa-3")
                         img(src='./img/websites/amish-furniture.png')
                         figcaption Amish <b>Furniture</b>
-                    
+                        
                     figure.forbiddentruth
                         i(class="fa fa-search fa-3")
                         img(src='./img/websites/forbidden-truth.png')
                         figcaption Forbidden <b>Truth</b>
-                        
+                            
                     figure.clocksnthings
                         i(class="fa fa-search fa-3")
                         img(src='./img/websites/clocks-n-things.png')
                         figcaption Clocks-<b>N</b>-Things
-                
+                        
+                    //- .checkboxes
+                        //- input(id="a", type="checkbox")
+                        //- label.box.green-background(for="a")
+                        //- label.text(for="a")
+                        //-     | Hello World!
+                    
+                            
+                    //- div.code-container
+                    //-     .code-1
+                    //-         img.code-lang(src="./img/dev/html5-original.png")
+                    //-         pre
+                    //-             code.html
+                    //-                 div.code-content
+                    //- div.code-container
+                    //-     .code-2
+                    //-         img.code-lang(src="./img/dev/nodejs-original.png")
+                    //-         pre
+                    //-             code.js
+                    //-                 div.code-content
+                    //- div.code-container
+                    //-     .code-3
+                    //-         img.code-lang(src="./img/dev/sass-original.png")
+                    //-         pre
+                    //-             code.scss
+                    //-                 div.code-content
+                    //- span.left <
+                    //- span.right >
+
+
+        //jQuery plugins
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js')
+        script(src="js/libs/jquery.github.js")
 
         //highlight.js
         script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js")
 
         //font awesome icon set
         script(src='https://use.fontawesome.com/02b2bc5fda.js')
-            
-        //jQuery plugins
-        script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js')
             
         //main scripts
         script(src="js/source.js")
