Minor modifications to main side-panel.

--- a/pre-compile/jade/index.jade
+++ b/pre-compile/jade/index.jade
@@ -50,11 +50,16 @@ html
                             span(class="devicons devicons-javascript")
                             span(class="devicons devicons-jquery")
                             span(class="devicons devicons-sass")
+                            span(class="devicons devicons-atom")
                         p.project_desc
                             | This website underwent 5 different design phases.
-                            | The site was created using Sass and Jade for pre-compiled languages,
-                            | HTML5 and CSS3 for other parts, jQuery for DOM manipulation, 
-                            | and it is hosted via Git Pages.
+                            | The site was created using <span style="color: #CF649A">Sass</span> and 
+                            | <span style="color: #C1272D"> Jade </span> as pre-compiled languages,
+                            | <span style="color: #E44D26"> HTML5 </span> and 
+                            | <span style="color: #007DC6"> CSS3 </span> after compilation, 
+                            | <span style="color: #116AAE"> jQuery </span> for DOM manipulation, 
+                            | and is hosted via 
+                            | <span style="color: #800080"> Git Pages</span>.
                         a.button.github(href="https://github.com/jgreenlee24")
                             | view on github
                             span
