Added pichu's cloud website image.

--- a/pre-compile/jade/index.jade
+++ b/pre-compile/jade/index.jade
@@ -42,82 +42,31 @@ html
 
                 aside.right
                     div
-                        h1.project_name sitesbyjustin.com
+                        h1.project_name
                         p.technologies
-                            span(class="devicons devicons-git")
-                            span(class="devicons devicons-html5")
-                            span(class="devicons devicons-css3")
-                            span(class="devicons devicons-javascript")
-                            span(class="devicons devicons-jquery")
-                            span(class="devicons devicons-sass")
-                            span(class="devicons devicons-atom")
                         p.project_desc
-                            | This website underwent 5 different design phases.
-                            | The site was created using <span style="color: #CF649A">Sass</span> and 
-                            | <span style="color: #C1272D"> Jade </span> as pre-compiled languages,
-                            | <span style="color: #E44D26"> HTML5 </span> and 
-                            | <span style="color: #007DC6"> CSS3 </span> after compilation, 
-                            | <span style="color: #116AAE"> jQuery </span> for DOM manipulation, 
-                            | and is hosted via 
-                            | <span style="color: #800080"> Git Pages</span>.
                         a.button.github(href="https://github.com/jgreenlee24")
                             | view on github
                             span
                                 i(class="fa fa-github fa-3")
                 section
-                    figure.rockwallfcm
-                        i(class="fa fa-search fa-3")
-                        img(src='./img/websites/rockwall-fcm.png')
-                        figcaption Rockwall <b>FCM</b>
-                        
-                    figure.sitesbyjustin
-                        i(class="fa fa-search fa-3")
-                        img(src='./img/websites/sites-by-justin.png')
-                        figcaption Sites By <b>Justin</b>
-                    
-                    figure.amishfurniture
-                        i(class="fa fa-search fa-3")
-                        img(src='./img/websites/amish-furniture.png')
-                        figcaption Amish <b>Furniture</b>
-                        
-                    figure.forbiddentruth
-                        i(class="fa fa-search fa-3")
-                        img(src='./img/websites/forbidden-truth.png')
-                        figcaption Forbidden <b>Truth</b>
-                            
-                    figure.clocksnthings
-                        i(class="fa fa-search fa-3")
-                        img(src='./img/websites/clocks-n-things.png')
-                        figcaption Clocks-<b>N</b>-Things
-                        
-                    //- .checkboxes
-                        //- input(id="a", type="checkbox")
-                        //- label.box.green-background(for="a")
-                        //- label.text(for="a")
-                        //-     | Hello World!
-                    
-                            
+                    figure.project_pic
+                        //- i(class="fa fa-search fa-3")
+                        img
+                        figcaption
+
                     //- div.code-container
                     //-     .code-1
                     //-         img.code-lang(src="./img/dev/html5-original.png")
                     //-         pre
                     //-             code.html
                     //-                 div.code-content
-                    //- div.code-container
-                    //-     .code-2
-                    //-         img.code-lang(src="./img/dev/nodejs-original.png")
-                    //-         pre
-                    //-             code.js
-                    //-                 div.code-content
-                    //- div.code-container
-                    //-     .code-3
-                    //-         img.code-lang(src="./img/dev/sass-original.png")
-                    //-         pre
-                    //-             code.scss
-                    //-                 div.code-content
-                    //- span.left <
-                    //- span.right >
 
+                    //- .checkboxes
+                        //- input(id="a", type="checkbox")
+                        //- label.box.green-background(for="a")
+                        //- label.text(for="a")
+                        //-     | Hello World!
 
         //jQuery plugins
         script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js')
