--- a/pre-compile/sass/index.scss
+++ b/pre-compile/sass/index.scss
@@ -133,6 +133,15 @@ html, body {height: 100%;}
    25% { @include transform(scale(1.25));}
 }
 
+//preload images
+#preload-01 { background: url('../img/websites/amish-furniture.png'); }
+#preload-01 { background: url('../img/websites/clocks-n-things.png'); }
+#preload-01 { background: url('../img/websites/forbidden-truth.png'); }
+#preload-01 { background: url('../img/websites/pichu_cloud.png'); }
+#preload-01 { background: url('../img/websites/portfolio.png'); }
+#preload-01 { background: url('../img/websites/rockwall-fcm.png'); }
+#preload-01 { background: url('../img/websites/sites-by-justin.png'); }
+
 //color varables
 $bg-color: black;
 $social-cols: (
